--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,11 @@
 {
   "name": "Geek Store",
+  "short_name": "Geek Store"
   "theme_color": "rgba(195,81,81,0.89)",
   "background_color": "#ffffff",
-  "display": "standalone",
+  "display": "fullscreen",
   "orientation": "landscape",
-  "Scope": "/",
+  "Scope": "/Geek Store",
   "start_url": "/",
   "icons": [
     {
